Add package dependency: TextAdapters

--- a/IrregularTables/Assets/EssentialPackages/UI/IrregularTables/Scripts/_IrregularTables.asmdef
+++ b/IrregularTables/Assets/EssentialPackages/UI/IrregularTables/Scripts/_IrregularTables.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "_IrregularTables",
     "references": [
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "_TextAdapters"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
