--- a/IrregularTables/Assets/EssentialPackages/UI/IrregularTables/Scripts/Tests/_IrregularTablesTest.asmdef
+++ b/IrregularTables/Assets/EssentialPackages/UI/IrregularTables/Scripts/Tests/_IrregularTablesTest.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "_IrregularTablesTest",
     "references": [
-        "_IrregularTables"
+        "_IrregularTables",
+        "_TextAdapters"
     ],
     "optionalUnityReferences": [
         "TestAssemblies"
